# llm-brewing

./: .gitignore  CLAUDE.md  README.md  normalized_delta_brew.json  normalized_delta_brew_README.md  pyproject.toml
brewing/: __init__.py  __main__.py  cache_builder.py  cli.py  nnsight_ops.py  orchestrator.py  registry.py  resources.py
docs/: cuebench_data.md  project_overview.md  running_modes.md  task_difficulty_design.md
docs_dev_brewing/: 10_fix_csd_baseline_space.md  10_gt_free_closed_form.md  10_pytorch_probe_migration.md  11_hierarchical_output_layout.md  12_mode_field_and_pipeline_factory.md  13_experiment_readiness_review.md  14_experiment_hardening.md  14_probing_accuracy_diagnosis.md  15_causal_validation_design_checklist.md  16_causal_validation_mvp.md  16_chain_probe_diagnostics.md  17_cache_precompute_10_models.md  1_init_mock_data.md  2_framework_skeleton.md  3_code_review.md  3a_bugfix_prompt.md  3b_code_review_fixes.md  4_remove_nnterp_dependency.md  5_refactor_plan.md  5a_phase1_structure_refactor.md  5b_phase1_cleanup.md  6_diagnostics_decoupling.md  7_naming_readability_pass.md  8_yaml_config_and_quantization.md  9_externalize_probing_training.md  full_eval_results_summary.md
scripts/: _reinjection_single_mode.py  causal_7b_small.py  causal_layer_skipping.py  causal_reinjection.py  csd_baseline_analysis.py  csd_digit0_bias_analysis.py  dry_run.py  expanded_train_and_probe.py  gt_free_closed_form.py  gt_free_resolution_index.py  gt_free_signals.py  inspect_caches.py  late_layer_sparsity.py  launch_dry_run.sh  migrate_output_layout.py  (+17 more)
(+137 files in other folders)
